added admin page

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -18,6 +18,7 @@
         </div>
         <nav>
             <ul>
+                <!--navigation links-->
                 <li><a href="#home">Home</a></li>
                 <li><a href="#rooms">Rooms</a></li>
                 <li><a href="../log-in-page/log-in.html">Logout</a></li>
